--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -24,7 +24,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     color: white;
     padding: 10px;
